Add all dependencies to package.json

--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/toystars/react-native-multi-select/issues"
   },
-  "homepage": "https://github.com/toystars/react-native-multi-select#readme"
+  "homepage": "https://github.com/toystars/react-native-multi-select#readme",
+  "dependencies": {
+    "native-base": "^0.5.20",
+    "react": "^15.4.2",
+    "react-native": "^0.40.0",
+    "react-native-vector-icons": "^4.0.0",
+    "underscore": "^1.8.3"
+  }
 }
