Add explicit dependencies

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "homepage": "https://github.com/toystars/react-native-multiple-select#readme",
   "dependencies": {
-    "native-base": "^0.5.20",
+    "native-base": "0.5.18",
+    "react": "15.4.0",
+    "react-native": "0.38.0",
+    "react-native-vector-icons": "2.1.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
