--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,10 @@
   },
   "extends": "airbnb",
   "rules": {
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+    "no-trailing-spaces": "off",
+    "no-useless-escape": "off",
+    "react/forbid-prop-types": 0,
+    "no-underscore-dangle": "off"
   }
 }
