--- a/sample/package.json
+++ b/sample/package.json
@@ -7,12 +7,12 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"lodash": "^4.17.4",
 		"native-base": "^2.1.3",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.44.0",
-		"react-native-multiple-select": "^0.1.1",
-		"react-native-vector-icons": "^4.1.1",
-		"underscore": "^1.8.3"
+		"react-native-multiple-select": "^0.2.1",
+		"react-native-vector-icons": "^4.1.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.1",
