--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "remote-redux-devtools": "^0.5.7"
   },
   "peerDependencies": {
+    "lodash": "^4.17.4",
     "native-base": "^2.1.3",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-native-vector-icons": "^4.1.1",
-    "underscore": "^1.8.3"
+    "prop-types": "^15.5.10"
   }
 }
