--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
   "peerDependencies": {
     "lodash": "^4.17.4",
     "native-base": "^2.1.3",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
     "react-native-vector-icons": "^4.1.1",
-    "prop-types": "^15.5.10"
+    "react-native-animatable": "^1.2.4"
   }
 }
