--- a/sample/package.json
+++ b/sample/package.json
@@ -11,7 +11,8 @@
 		"native-base": "^2.1.3",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.44.0",
-		"react-native-multiple-select": "^0.2.1",
+		"react-native-animatable": "^1.2.4",
+		"react-native-multiple-select": "^0.2.2",
 		"react-native-vector-icons": "^4.1.1"
 	},
 	"devDependencies": {
