--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
-    "react-native-vector-icons": "^4.1.1",
-    "react-native-animatable": "^1.2.4"
+    "react-native-vector-icons": "^4.1.1"
   }
 }
