--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "preset": "jest-react-native"
   },
   "lint-staged": {
-    "**/*.{js,json,css}": ["prettier --single-quote --write ", "git add"]
+    "**/*.{js,json,css}": [
+      "./node_modules/prettier --single-quote --write ",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
