Make prettier command look inside node_modules folder

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "lint-staged": {
     "**/*.{js,json,css}": [
-      "./node_modules/prettier --single-quote --write ",
+      "./node_modules/prettier/bin --single-quote --write ",
       "git add"
     ]
   },
