--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "preset": "jest-react-native"
   },
   "lint-staged": {
-    "*.{js,json,css}": ["prettier --single-quote --write", "git add"]
+    "*.{js,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toystars/react-native-multiple-select.git"
   },
-  "keywords": ["reactnative", "multiselect", "multi-select", "react-native"],
+  "keywords": [
+    "reactnative",
+    "multiselect",
+    "multi-select",
+    "react-native"
+  ],
   "author": "Mustapha Babatunde Oluwaleke",
   "license": "MIT",
   "bugs": {
@@ -28,7 +36,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "23.6.0",
     "babel-preset-react-native": "^1.9.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -36,18 +44,17 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "husky": "^0.14.3",
-    "jest": "^18.1.0",
+    "jest": "^23.3.6",
     "jest-react-native": "^18.0.0",
     "lint-staged": "^5.0.0",
-    "prettier": "^1.8.2",
-    "react-test-renderer": "^15.4.2",
-    "remote-redux-devtools": "^0.5.7"
+    "prettier": "^1.15.3",
+    "react-test-renderer": "16.6.3",
+    "remote-redux-devtools": "^0.5.16"
   },
   "peerDependencies": {
-    "lodash": "^4.17.4",
-    "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.6",
-    "react-native": "^0.50.4",
-    "react-native-vector-icons": "^4.1.1"
+    "lodash": "^4.17.11",
+    "react": "16.6.3",
+    "react-native": "^0.57.8",
+    "react-native-vector-icons": "^6.1.0"
   }
 }
