--- a/package.json
+++ b/package.json
@@ -55,9 +55,8 @@
     "remote-redux-devtools": "^0.5.16"
   },
   "peerDependencies": {
-    "lodash": ">4.17.00",
-    "react": ">16.6.0",
-    "react-native": ">0.57.0",
-    "react-native-vector-icons": ">6.0.0"
+    "react": "^16.12.0",
+    "react-native": "^0.61.5",
+    "react-native-vector-icons": "^6.6.0"
   }
 }
