--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
-        "outDir": "dist",
-        "module": "ESNEXT",
-        "target": "ESNEXT",
+        "outDir": "build",
+        "module": "esnext",
+        "target": "es5",
         "lib": ["es6", "dom", "es2016", "es2017"],
         "sourceMap": true,
         "allowJs": false,
-        "jsx": "react",
+        "jsx": "react-native",
         "declaration": true,
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
