--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "noImplicitAny": true,
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "noUnusedParameters": true,
+        "removeComments": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "build", "dist"]
