--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "outDir": "build",
-        "module": "esnext",
+        "module": "commonjs",
         "target": "es5",
         "lib": ["es6", "dom", "es2016", "es2017"],
         "sourceMap": true,
@@ -10,6 +10,7 @@
         "jsx": "react-native",
         "declaration": true,
         "moduleResolution": "node",
+        "typeRoots": ["node_modules/@types"],
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -17,7 +18,8 @@
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "removeComments": true
+        "removeComments": true,
+        "skipLibCheck": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "build", "dist"]
