--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "outDir": "build",
-        "module": "commonjs",
+        "module": "esnext",
         "target": "es5",
         "lib": ["es6", "dom", "es2016", "es2017"],
         "sourceMap": true,
