--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lodash": ">4.17.00",
     "react": ">16.6.0",
     "react-native": ">0.57.0",
-    "react-native-vector-icons": ">6.0.0"
+    "react-native-vector-icons": ">6.0.0",
+    "deprecated-react-native-prop-types": ">2.0.0"
   }
 }
